# detex-rs

./: .gitattributes  CLAUDE.md  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml
latex_tests/: 01_simple_text.tex  03_sections.tex  04_lists.tex
latex_tests/simple/: 05_emphasis.tex  06_citations.tex  09_nested_environments.tex  complex_input.tex  test_align.tex  test_minimal_eq.tex  test_theorem.tex  test_whitespace.tex
latex_tests/simple/input/: timeline.tex
opendetex-2.8.11/: .gitignore
scripts/: compare.sh
src/: config.rs  file_handler.rs  lexer.rs  lib.rs  main.rs
tests/: compare_with_opendetex.rs
tests/latex/: has_packages.tex  missing_input.tex  new_document_command.tex  test_lamacro_newlines.tex
tests/latex/input/: multiline_hypersetup.tex  preamble-packages.tex  preamble-setup.tex
tests/latex/simple/: 02_math.tex  07_environments.tex  08_verbatim.tex
